--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -1,19 +1,21 @@
 * {
   font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  width: auto;
+}
+
+button {
+    cursor: pointer;
 }
 
 a {
   text-decoration: none;
 }
 
-html {
-  background-color: lightgray;
-}
-
 #content {
   background-color: white;
-  padding: 20px;
-  margin: 20px;
 }
 
 .inline {
@@ -161,51 +163,9 @@ textarea:focus {
 /* Lists */
 ul {
   list-style-type: none;
-  padding: 10px;
 }
 
-li {
-  margin: 10px;
-}
-
-/* Style Login Page */
-.login-header {
-  padding: 200px 0 200px 0;
-  width: 40%;
-  margin: 0 auto;
-  align-items: center;
-  text-align: center;
-}
-
-.login-header h1 {
-  font-size: 40px;
-}
-
-.feature img {
-  height: 50%;
-  width: 50%;
-}
-
-.feature {
-  display: flex;
-  width: 50%;
-  margin: 0 auto;
-  padding: 0 0 200px 0;
-}
-
-/* Style Main Hub/Home Page */
-.projects,
-.new-project,
-#home-header {
-  width: 50%;
-  margin: 0 auto;
-}
-
-.projects button {
-  width: 200px;
-  height: 150px;
-}
-
+/* Navigation bar */
 #navigation ul {
   list-style-type: none;
   margin: 0;
@@ -235,6 +195,39 @@ li {
   height: 150px;
 }
 
-#project-add-user-form {
+#add-user-to-project-modal, 
+#message-modal {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  top: 0;
   display: none;
+  justify-content: center;
+  align-items: center;
 }
+
+.modal-content {
+  width: auto;
+  height: auto;
+  background-color: white;
+  border-radius: 8px;
+  text-align: center;
+  padding: 20px 50px;
+  position: relative;
+}
+
+.modal-content > * {
+  display: block;
+  margin: 10 auto;
+}
+
+#modal-close {
+  top: 0;
+  right: 10px;
+  position: absolute;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
