--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -7,7 +7,7 @@
 }
 
 button {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 a {
@@ -16,6 +16,8 @@ a {
 
 #content {
   background-color: white;
+  padding: 10px 30px;
+  margin: 20px 50px;
 }
 
 .inline {
@@ -38,7 +40,9 @@ a {
   background-color: aliceblue;
 }
 
+
 /* Add comments form */
+
 #task-addcomments-container {
   padding: 30px;
   border: 2px solid dodgerblue;
@@ -71,7 +75,9 @@ textarea:focus {
   border: 3px solid dodgerblue;
 }
 
+
 /* User info */
+
 .user-stats {
   border: 2px solid blueviolet;
   margin-right: 60%;
@@ -97,7 +103,9 @@ textarea:focus {
   padding: 10px;
 }
 
+
 /* Deep buttons */
+
 .deep-button {
   text-align: center;
   color: white;
@@ -122,7 +130,9 @@ textarea:focus {
   transform: translateY(5px);
 }
 
+
 /* Flat buttons */
+
 .flat-button {
   text-align: center;
   font-size: 18px;
@@ -143,7 +153,9 @@ textarea:focus {
   background-color: dodgerblue;
 }
 
+
 /* status on checklist determines task color */
+
 .incomplete {
   background-color: red;
 }
@@ -160,12 +172,16 @@ textarea:focus {
   background-color: darkgreen;
 }
 
+
 /* Lists */
+
 ul {
   list-style-type: none;
 }
 
+
 /* Navigation bar */
+
 #navigation ul {
   list-style-type: none;
   margin: 0;
@@ -190,8 +206,10 @@ ul {
   background-color: #111;
 }
 
+
 /* Style Modals */
-#add-user-to-project-modal, 
+
+#add-user-to-project-modal,
 #message-modal {
   width: 100%;
   height: 100%;
@@ -213,7 +231,7 @@ ul {
   position: relative;
 }
 
-.modal-content > * {
+.modal-content>* {
   display: block;
   margin: 10 auto;
 }
@@ -227,7 +245,9 @@ ul {
   cursor: pointer;
 }
 
+
 /* Style Home Page */
+
 .project-container {
   margin: 20px auto;
   display: flex;
@@ -239,9 +259,11 @@ ul {
   margin: 10px 10px;
   transition: transform 300ms;
 }
+
 .project-box:hover {
   transform: scale(1.1);
 }
+
 .project-box-content {
   color: white;
   background-color: #4285F4;
@@ -253,4 +275,107 @@ ul {
   justify-content: center;
   align-items: center;
 }
+
+.project-page-top-bar {
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
+  padding: 20px;
+}
+
+.page-header-title-and-actions {
+  display: flex;
+  align-items: center;
+}
+
+.page-header-title {
+  padding: 0 0 20px 10px;
+}
+
+.page-header-title h1 {
+  margin-right: 20px;
+  font-weight: bold;
+}
+
+.page-header-actions-selector {
+  cursor: pointer;
+  position: relative;
+  outline: none;
+}
+
+#angle-down {
+  color: gray;
+  font-size: 25px;
+}
+
+.page-header-actions {
+  background-color: white;
+  width: 185px;
+  position: absolute;
+  border: 1px solid lightgray;
+  border-radius: 3px;
+  display: none;
+}
+
+.page-header-actions ul li a {
+  padding: 10px;
+  display: flex;
+  font-size: 16px;
+  color: black;
+  align-items: center;
+}
+
+.page-header-actions ul li a i {
+  padding-right: 10px;
+}
+
+.page-header-actions ul li:hover {
+  background-color: lightgray;
+}
+
+.page-header-nav {
+  display: flex;
+}
+
+.project-header-tab {
+  border-radius: 50px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 20px;
+  margin: 0 10px;
+  transition: background 0.4s linear;
+}
+
+i {
+  font-size: 12px;
+}
+
+.project-header-tab p {
+  font-weight: bold;
+  overflow: hidden;
+  max-width: 0;
+}
+
+.project-header-tab.active p {
+  margin-left: 10px;
+  max-width: 200px;
+  transition: max-width 0.4s linear;
+}
+
+.project-header-tab.active {
+  background-color: #4285F4;
+  color: white;
+}
+
+.project-section {
+  display: none;
+  margin: 100px auto;
+  width: 60%;
+}
+
+.project-section.active {
+  display: block;
+}
+
+
 
