--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -299,8 +299,7 @@ ul {
 
 /* Style Modals */
 
-#add-user-to-project-modal,
-#message-modal {
+.modal {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
@@ -326,14 +325,14 @@ ul {
   margin: 10 auto;
 }
 
-#modal-close {
+.modal-close {
   top: 0;
   right: 10px;
   position: absolute;
   cursor: pointer;
 }
 
-#modal-close i {
+.modal-close i {
   font-size: 20px;
 }
 
@@ -389,9 +388,7 @@ ul {
 }
 
 .page-header-actions-selector {
-  top: -8px;
   cursor: pointer;
-  position: relative;
 }
 
 #angle-down {
