trying another approach to get comment from java to js. still not working

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -378,12 +378,12 @@ textarea:focus {
 }
 
 .submit-button {
- font-size: 12px;
+  font-size: 12px;
 }
 
 #box {
-  width:300px;
-  height:100px
+  width: 300px;
+  height: 100px;
 }
 
 .deep-button:hover {
